[project]
name = "yt_moviemaker"
version = "0.1.0"
description = "utils for making gifs and mp4 movies from yt loaded data"
readme = "README.md"
authors = [
  {name = "Lindsey Gordon", email = "contactlindseycg@gmail.com"}
]
maintainers = [
  {name = "Lindsey Gordon", email = "contactlindseycg@gmail.com"}
]
classifiers = [

]
license = {text = "MIT"}
dependencies = [
  "typer", 
  "numpy",
  'matplotlib', 
  'imageio_ffmpeg',
  'yt',
  "ruff",
  "pytest"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"    
]

[project.urls]
bugs = "https://github.com/lcgordon/yt_moviemaker/issues"
changelog = "https://github.com/lcgordon/yt_moviemaker/blob/master/changelog.md"
homepage = "https://github.com/lcgordon/yt_moviemaker"

[project.scripts]
yt_moviemaker = "yt_moviemaker.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
